[package]
name = "abstract_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres" ] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
